--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
             <input type="submit" value="SUBMIT">
         </div>
     </form>
-
+    <script
+        src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
     <script src="veggies.js"></script>
 
 </body>
