--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
             <input type="submit" value="SUBMIT">
         </div>
     </form>
+    <script>
+        const DATABASE_URL = window.location.protocol === 'https:' ? 'https://hackathon-plants.herokuapp.com' : 'http://localhost:3000';
+    </script>
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
