--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </form>
     <script>
-        const DATABASE_URL = window.location.protocol === 'https:' ? 'https://hackathon-plants.herokuapp.com' : 'http://localhost:3000';
+        const DATABASE_URL= 'https://hackathon-plants.herokuapp.com';
     </script>
     <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
